<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TactileClock</string>

    <string name="fragmentStart">Start</string>
    <string name="labelApplicationDescription1"> This Android app vibrates the current time when the
        display is locked and the power button is pressed twice in a row with a delay between 50 and
        1000 milliseconds. If the double click is performed accidentally while the display is still
        active, the app warns with a long, persistent vibration.</string>
    <string name="labelApplicationDescription2">The background process is started automatically after booting is finished.  </string>
    <string name="labelApplicationDescription3">Basically there exist two different vibration
        pattern: A short vibration stands for the digit 1 and a long one for the digit 5. The 2
        is represented by two consecutive short vibrations, the 6 by a long and a short one and so
        on. The 0 constitutes an exception with two long vibrations.</string>
    <string name="labelApplicationDescription4">Examples:\n- 01:16 =   ..     s ... s .. l . s\n- 02:51 =   .. s . s ... l ..     s\n- 10:11 = s .. l . l ... s ..     s</string>
    <string name="labelApplicationDescription5">Explanation:\nThe time is processed digit by digit.
        s = short, l = long. A leading zero at the hour field is omitted. To simplify the
        recognition of the vibration pattern, there exist three kind of gabs with different
        durations, marked by the number of dots in the examples above. A single dot stands for the
        pause between two vibrations, two dots symbolize the separation of two digits within the
        hour and minute field and three dots split hours and minutes.</string>

    <string name="fragmentSettings">Settings</string>
    <string name="buttonEnableService">Enable service</string>
    <string name="labelHourFormat">Choose between 12 and 24 hour time format</string>
    <string name="button12Hours">12 hour format</string>
    <string name="button24Hours">24 hour fourmat</string>
    <string name="labelTimeComponentOrder"></string>
    <string name="buttonHoursMinutes">Hours first, then minutes</string>
    <string name="buttonMinutesHours">Minutes first, then hours</string>
    <string name="labelErrorVibration">Warning vibration: If double click of power button is performed
        accidentally while display is active</string>
    <string name="buttonErrorVibration">Warning vibration</string>

    <string name="fragmentInfo">Info</string>
    <string name="labelApplicationVersion">Version: </string>
    <string name="labelEMailAddress">Contact: email@eric-scheibler.de</string>
    <string name="labelWebsite">Website: https://github.com/scheibler/TactileClock</string>

</resources>
