<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/buttonEnableService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEnableService" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelTimeFormat" />

        <RadioGroup
            android:id="@+id/radioTimeFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/button12Hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button12Hours" />

            <RadioButton
                android:id="@+id/button24Hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button24Hours" />
        </RadioGroup>

    </LinearLayout>
</ScrollView>
